// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change the style 1`] = `
<DocumentFragment>
  <div
    class="css-1pl3ejm"
    data-chakra-component="CPseudoBox"
    data-testid="pseudobox"
  >
    Box Works
  </div>
</DocumentFragment>
`;

exports[`should display Box with type as header 1`] = `
<DocumentFragment>
  <header
    class="css-0"
    data-chakra-component="CPseudoBox"
    data-testid="pseudobox"
  >
    Box Works
  </header>
</DocumentFragment>
`;

exports[`should display Box with type as p 1`] = `
<DocumentFragment>
  <p
    class="css-0"
    data-chakra-component="CPseudoBox"
    data-testid="pseudobox"
  >
    Box Works
  </p>
</DocumentFragment>
`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  <div
    class="css-0"
    data-chakra-component="CPseudoBox"
    data-testid="pseudobox"
  >
    Box Works
  </div>
</DocumentFragment>
`;
